# fasttravel

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_init.py  002_calendar_meal_filter.py  003_hotel_scrape_status.py  004_deals_source.py  005_search_indexes.py  006_deals_dedup_constraint.py  007_price_obs_natural_unique.py  008_drop_deal_window_index.py  009_current_prices_observed_window.py  010_telegram_subscriber_filters.py  011_hotel_slug_aliases.py  012_promo_offers.py  013_deals_detection_method.py  014_deals_dedup_with_detection_method.py  015_current_prices_nights_search_index.py  016_hotel_calendar_jsonb.py  017_known_hotel_slug_aliases.py  018_hotels_coords_postgis.py  019_telegram_filter_notifications.py  020_room_category_current_prices.py  021_current_prices_room_family.py  022_deals_telegram_claim_timestamp.py  023_deals_dedup_drop_detection_day.py  024_heartbeats.py
apps/api/scripts/: README.md  __init__.py  check_deal_sanity.py  seed_demo.py  seed_e2e.py  seed_multicountry.py
apps/api/src/: config.py  deps.py  main.py
apps/api/src/infra/: cache.py  db.py  limiter.py  logging.py  middleware.py  sentry.py
apps/api/src/models/: __init__.py  deal.py  destination.py  hotel.py  hotel_operator_mapping.py  hotel_slug_alias.py  operator.py  price_observation.py  promo_offer.py  scrape_run.py  telegram_subscriber.py
apps/api/src/routers/: cheapest_tours.py  deals.py  destinations.py  health.py  hotels.py  promotions.py  search.py  seo.py
apps/api/src/schemas/: calendar.py  cheapest_tour.py  deal.py  destination.py  hotel.py  promotion.py  search.py
apps/api/src/services/: calendar_service.py  cheapest_tours_service.py  deal_service.py  meal_normalizer.py  promo_service.py  redirect_service.py  refresh_queue.py  search_service.py
apps/api/tests/: conftest.py  test_cheapest_tours.py  test_db_fixture_config.py  test_deals.py  test_detect_deals_bucket.py  test_filter_notifications_migration.py  test_health.py  test_hotel_calendar_route.py  test_limiter_key_func.py  test_meal_plan_contract.py  test_promo_offers_orm.py  test_promo_pipeline_e2e.py  test_promo_service.py  test_promotions_endpoint.py  test_refresh_rate_limit.py  test_room_category_migration.py  test_room_family_migration.py  test_search_route.py  test_search_service.py  test_seed.py  test_seed_e2e.py  test_seo.py  test_telegram_claim_migration.py
apps/bot/: Dockerfile  README.md  pyproject.toml  pytest.ini
apps/bot/src/: alert_webhook.py  config.py  main.py
apps/bot/src/handlers/: __init__.py  admin_discovery.py  cheap.py  commands.py  deals.py  destinations.py  profile.py  search_wizard.py  subscribe.py  wizard_render.py
apps/bot/src/infra/: api_client.py  callbacks.py  db.py  logging.py  metrics.py  middleware.py  sentry.py  telegram_text.py  url_safety.py
apps/bot/src/keyboards/: countries.py  filters.py  main_menu.py
apps/bot/src/publishers/: __init__.py
apps/bot/src/states/: search.py  subscribe.py
apps/bot/src/templates/: cheap.py  deal.py
apps/bot/tests/: conftest.py  test_alert_webhook.py  test_callbacks.py  test_cheap.py  test_config.py  test_db_subscriptions.py  test_deals_callbacks.py  test_deals_copy.py  test_deals_keyboard.py  test_destinations_callbacks.py  test_keyboards.py  test_markdown_v2_urls.py  test_notification_controls.py  test_profile.py  test_search_wizard_hotel_query.py  test_search_wizard_links.py  test_search_wizard_subscribe.py  test_site_urls.py  test_templates.py  test_throttle.py
apps/ingest/: README.md  pyproject.toml
apps/ingest/src/: __init__.py  dedup.py  exceptions.py  pipeline.py  settings.py
apps/ingest/src/clients/: __init__.py  base.py  farvater_scraper.py  ittour.py  tbo_holidays.py
apps/ingest/src/normalizers/: __init__.py  base.py  farvater_normalizer.py  ittour_normalizer.py  tbo_normalizer.py
apps/ingest/tests/: conftest.py  test_dedup.py  test_normalizers.py  test_pipeline.py
apps/scheduler/: Dockerfile  README.md  pyproject.toml
apps/scheduler/scripts/: backfill_hotel_meta.py  ingest_sitemap_catalog.py  repair_farvater_hotel_names.py
apps/scheduler/src/: config.py  main.py
apps/scheduler/src/clients/: farvater_calendar.py  farvater_catalog.py  farvater_hotel_page.py  farvater_runtime.py  static_tours.py
apps/scheduler/src/infra/: cache.py  db.py  farvater_http.py  job_lock.py  logging.py  metrics.py  sentry.py
apps/scheduler/src/jobs/: __init__.py  _dedup_window.py  _price_validation.py  canary_farvater_schema.py  cleanup_partitions.py  decay_active_prices.py  detect_deals.py  notify_subscribers.py  post_cheapest_digest.py  post_deals.py  refresh_baselines.py  refresh_views.py  refresh_worker.py  sitemap_long_tail.py  snapshot_catalog_farvater.py  snapshot_farvater.py  (+3 more)
apps/scheduler/tests/: conftest.py  test_calendar_anomaly_semantics.py  test_canary_farvater_schema.py  test_cleanup_partitions.py  test_config.py  test_deal_detection_policy.py  test_deal_rendering.py  test_deal_safety_sql.py  test_decay_active_prices.py  test_dedup_window.py  test_farvater_calendar_client.py  test_farvater_catalog_helpers.py  test_farvater_hotel_page_client.py  test_farvater_http.py  test_farvater_nights_config.py  test_farvater_runtime.py  test_hotel_upsert_service.py  test_job_lock.py  test_materialized_views_service.py  test_metrics.py  test_notify_subscribers.py  test_notify_subscribers_orchestration.py  test_post_cheapest_digest.py  test_post_deals_orchestration.py  test_post_deals_render.py  test_price_insert_service.py  test_price_state_service.py  test_price_validation.py  test_refresh_baselines.py  test_refresh_worker_raw_payload.py  test_scrape_runs_service.py  test_shared_redis_client.py  test_shared_text_uk.py  test_sitemap_long_tail.py  test_smoke.py  test_snapshot_catalog_farvater.py  test_snapshot_farvater.py  test_snapshot_hot.py  test_snapshot_targets_service.py  test_static_tours.py  (+1 more)
(+213 files in other folders)
