# Poetry chosen over pip-tools because:
#   1. It generates a strict lock file (poetry.lock) for reproducible builds.
#   2. `poetry export -f requirements.txt` plays cleanly with multi-stage
#      Docker builds (we only need the runtime deps in the final image).
#   3. Better tooling around dev/test/prod dep groups than pip-tools.
#   4. Strong AI-agent familiarity — generation quality is high.
[tool.poetry]
name = "fasttravel-api"
version = "0.1.0"
description = "FastTravel HTTP API — read-only endpoints over hotels / calendar / deals"
authors = ["FastTravel <hi@fasttravel.com.ua>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# Audit #5 — fastapi 0.132 pulls starlette 0.49.x (drops CVE-2025-54121,
# CVE-2025-62727). starlette 1.0.1 (which closes PYSEC-2026-161 too) is
# blocked for now because prometheus-fastapi-instrumentator <=7.1.0 caps
# starlette <1.0.0; revisit when that lib ships an update.
fastapi = "^0.132.0"
starlette = "^0.49.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.13.3"
asyncpg = "^0.30.0"
# Sync driver — used only by Alembic for offline mode and by ad-hoc scripts.
psycopg = {extras = ["binary"], version = "^3.2.3"}
redis = "^5.2.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
structlog = "^24.4.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
prometheus-fastapi-instrumentator = "^7.1.0"
# Audit #5 — closes 3 CVEs (CVE-2026-24486/40347/42561). 0.0.29 is the
# current head; ^ pins inside the 0.0.x range.
python-multipart = "^0.0.29"
# httpx with HTTP/2 — outbound calls to farvater.travel for the on-demand
# /api/hotels/{id}/refresh stale-while-revalidate endpoint.
httpx = {extras = ["http2"], version = "^0.27.2"}
# Per-IP rate limiting for the user-triggered `/api/hotels/{id}/refresh`.
# Queue cap + per-hotel lock alone don't stop an attacker rotating hotel_ids
# from a single IP — slowapi caps that at 10 req/IP/hour.
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
# Audit #7 — pytest-cov was referenced from CI but never declared; the
# coverage step was silently skipping. Pin alongside pytest so the
# coverage gate is enforced again.
pytest = "^8.3.3"
pytest-asyncio = ">=0.24,<1.5"
pytest-cov = "^6.0.0"
ruff = "^0.7.4"
mypy = "^1.13.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["..", "."]
# `slow` marks long-running tests (e.g. tests/test_seed.py) that we skip in CI.
# Run them locally with `pytest -m slow`.
markers = [
    "slow: long-running tests (DB seed, etc.); not run in CI by default",
]
# Default: skip slow tests. Override with `pytest -m slow` to run them.
addopts = "-m 'not slow'"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",   # long SQL / response-model signatures are common in FastAPI
    "B008",   # FastAPI intentionally uses Depends()/Query() defaults
    "RUF001", # Ukrainian/Cyrillic text is intentional product copy
    "RUF002",
    "RUF003",
    "RUF012", # SQLAlchemy declarative class metadata pattern
    "RUF100", # allow noqa for optional rule sets shared across agents
    "SIM105",
    "UP017",
    "UP037", # quoted relationship annotations keep TYPE_CHECKING imports cheap
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Audit Sprint #7 — shared.infra.* lives in apps/shared/. mypy needs
# to know about that path even when invoked from apps/api/.
mypy_path = ["..", "../shared"]
explicit_package_bases = true
namespace_packages = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
