# apps/ingest is imported by apps/scheduler — it is NOT a runnable service.
# Poetry config mirrors apps/api (Python 3.12, ruff/mypy/pytest pinned the
# same way) so a developer can hop between packages without re-learning
# tooling. Dependencies that already live in apps/api (sqlalchemy, redis,
# structlog, pydantic) are re-declared here because each Poetry project
# resolves its own venv — there is no monorepo workspace.
[tool.poetry]
name = "fasttravel-ingest"
version = "0.1.0"
description = "FastTravel data ingestion — clients, normalizers, pipeline orchestration"
authors = ["FastTravel <hi@fasttravel.com.ua>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# HTTP/JSON clients. http2 keeps a single multiplexed connection alive
# against the TBO / ittour endpoints, halving handshake overhead during
# the 06:00 / 18:00 snapshot bursts.
httpx = {extras = ["http2"], version = "^0.27.2"}
# Chrome TLS fingerprint — farvater.travel sits behind Cloudflare and the
# vanilla python TLS handshake gets flagged. curl_cffi impersonates a
# real Chrome 117 ClientHello so the bootstrap scraper survives long
# enough to be useful. Audit #5 — 0.15.0 closes CVE-2026-33752.
curl-cffi = "^0.15.0"
# Audit #5 — direct pin so curl-cffi's transitive urllib3 1.26.x doesn't
# slip in (5 CVEs: CVE-2025-50181/66418/66471, CVE-2026-21441, PYSEC-2026-141).
urllib3 = "^2.7.0"
# selectolax is ~10x faster than BeautifulSoup for the kind of "find one
# JSON blob in 400KB of HTML" parsing we do on farvater hotel pages.
selectolax = "^0.3.27"
tenacity = "^9.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
redis = "^5.2.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
# Record real HTTP responses once → replay deterministically forever.
# Critical for CI: no real-network call should ever leave the test process.
pytest-vcr = "^1.0.2"
# vcrpy is what pytest-vcr wraps. Pin separately so we control the
# cassette format version. vcrpy 7+ unblocks urllib3 v2 (required to
# resolve the urllib3 1.26.20 CVE cluster — audit #5).
vcrpy = "^8.0.0"
respx = "^0.21.1"
# fakeredis lets us exercise the dedup contract without spinning up
# a real Redis in unit tests.
fakeredis = "^2.26.1"
ruff = "^0.7.4"
mypy = "^1.13.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
# Record-mode = none → if a cassette is missing, the test FAILS rather
# than silently making a real outbound request. This is the single most
# important VCR setting for CI safety.
filterwarnings = [
    "ignore::DeprecationWarning:vcr.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
