# Poetry chosen for the same reasons documented in apps/api/pyproject.toml:
# strict lockfile, clean `poetry export` for multi-stage Docker, and good
# group separation for dev/test/main deps. Keeping the scheduler aligned
# with the API stack also means devs can re-use mental model and tooling.
[tool.poetry]
name = "fasttravel-scheduler"
version = "0.1.0"
description = "FastTravel scheduler — APScheduler jobs (refresh MVs, detect deals, post to Telegram, partition GC)"
authors = ["FastTravel <hi@fasttravel.com.ua>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# aiogram 3.x caps Python at <3.15. Tighten the range so Poetry's
# resolver doesn't trip when ^3.12 is interpreted as >=3.12,<4. Docker
# base is python:3.12-slim-bookworm regardless.
python = ">=3.12,<3.15"
apscheduler = "^3.10.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
redis = "^5.2.0"
# Audit #4 — bump aiogram so its aiohttp pin allows 3.13.x (closes 18
# CVEs in aiohttp 3.12). 3.25 is the first release that opens
# `aiohttp <3.14`. Hard-pin (no `^`) so the scheduler resolves to the
# exact same aiogram version the bot's Dockerfile pins (3.25.0); the
# shared publishers package in apps/shared/publishers/broadcast.py runs
# in both processes and must see identical aiogram surface to avoid
# subtle behavior drift (e.g. MarkdownV2 escaping changes, NotAppKey
# warnings differing per minor version).
aiogram = "3.25.0"
aiohttp = "^3.13.5"
# httpx (with HTTP/2) — outbound calls to farvater.travel from snapshot_farvater.py
httpx = {extras = ["http2"], version = "^0.27.2"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
structlog = "^24.4.0"
sentry-sdk = {extras = ["asyncio"], version = "^2.18.0"}
# python:3.12-slim does NOT bundle zoneinfo data; APScheduler timezone="Europe/Kyiv"
# would raise ZoneInfoNotFoundError without it. Pulling the wheel-only `tzdata`
# package is cheaper than apt-get'ing system tzdata in Dockerfile.
tzdata = "^2024.2"
# Prometheus metrics — exposed on a tiny HTTP server (port 9101 by default,
# see src.infra.metrics). Scraped by Prometheus to track job duration,
# success/failure counts, and queue depth.
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
# fakeredis covers tests that exercise Redis-touching code paths
# (snapshot_hot, refresh_worker) without spinning a real Redis.
fakeredis = "^2.26.1"
ruff = "^0.7.4"
mypy = ">=1.13,<3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["..", "."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF100",
    "UP017",
]

[tool.ruff.lint.isort]
known-first-party = ["shared", "src"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Audit Sprint #7 — shared.{infra,publishers}.* live in apps/shared/.
# mypy needs the path even when invoked from apps/scheduler/.
mypy_path = ["..", "../shared"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "apscheduler.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
